k8s/base/demo-fe.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-fe-svc
  namespace: fe
  labels:
    app: demo-fe
spec:
  ports:
    - name: rest
      port: 8080
      targetPort: http
  selector:
    app: demo-fe
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-fe
  namespace: fe
  labels:
    app: demo-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-fe
  template:
    metadata:
      labels:
        app: demo-fe
    spec:
      containers:
        - name: demo-fe
          image: jei0486/demo-fe
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          command: ["java"]
          args: ['-cp', '@/app/jib-classpath-file','com.demo.fe.DemoFeApplication', '--spring.config.locatin=/config/application.yaml']
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          configMap:
            name: demo-fe-configmap
