k8s/base/demo-fe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-fe-ingress
  namespace: fe
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "demo.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: demo-fe-svc
                port:
                  number: 8080
